--- a/client/src/Components/Header/Header.css
+++ b/client/src/Components/Header/Header.css
@@ -5,3 +5,11 @@
     text-align: center ;
     color: #2c3e50 ;
 }
+
+@media only screen and (max-width: 450px){
+
+    .headingCtrl{
+    margin-top: 50px ;
+    }
+
+}
