--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,3 +27,12 @@ body{
   background-color: #ee1630;
   width: 170px;
 }
+
+@media only screen and (max-width: 450px){
+
+  body{
+
+    width: 90% ;
+
+  }
+}
